log.txt
  File "/home/runner/work/Funds_Startegy/Funds_Startegy/main.py", line 557
    except: pass
    ^^^^^^
SyntaxError: invalid syntax
